# COMP2510Assignment1

./: CMakeLists.txt  README.md  doctor.c  doctor.h  globals.c  globals.h  hospital.c  hospital.h  main.c  patient.c  patient.h  report.c  report.h  utils.c  utils.h
